--- a/ClientBook/ClientBook.csproj
+++ b/ClientBook/ClientBook.csproj
@@ -97,8 +97,19 @@
     <Compile Include="CadastroClassif.xaml.cs">
       <DependentUpon>CadastroClassif.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CadastroEstabelec.xaml.cs">
+      <DependentUpon>CadastroEstabelec.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CadastroProd.xaml.cs">
+      <DependentUpon>CadastroProd.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Entidade\Classificacao.cs" />
     <Compile Include="Entidade\CompraEntidade.cs" />
+    <Compile Include="Entidade\Estabelecimento.cs" />
+    <Compile Include="Entidade\Produto.cs" />
+    <Compile Include="ListaCompras.xaml.cs">
+      <DependentUpon>ListaCompras.xaml</DependentUpon>
+    </Compile>
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -106,6 +117,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio\ClassificRepositorio.cs" />
     <Compile Include="Repositorio\CompraRepositorio.cs" />
+    <Compile Include="Repositorio\EstabelecRepositorio.cs" />
+    <Compile Include="Repositorio\ProdutoRepositorio.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -121,6 +134,18 @@
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
     <Page Include="CadastroClassif.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CadastroEstabelec.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CadastroProd.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ListaCompras.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -160,6 +185,11 @@
     <Content Include="Assets\Tiles\IconicTileSmall.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Documentos do Projeto\Diagrama de Classe Sprint 1.png" />
+    <Content Include="Documentos do Projeto\Use Case Sprint 1.png" />
+    <Content Include="Icons\add.png" />
+    <Content Include="Icons\delete.png" />
+    <Content Include="Icons\about.png" />
     <Content Include="README_FIRST.txt" />
     <Content Include="Toolkit.Content\ApplicationBar.Add.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
@@ -178,6 +208,7 @@
       <HintPath>..\packages\WPtoolkit.4.2013.08.16\lib\wp8\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
